# ChangeLog for x11-drivers/xf86-video-intel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr>
  +files/01_fix_compiz_video.diff, +files/01_gen_pci_ids.diff,
  +files/03_dell_1535_quirk.diff,
  +files/xf86-video-i810-2.1.1-fix_build_without_dri.patch,
  +files/04_dell_1735_quirk.diff, +files/05_intel_exa_force_greedy.patch,
  +files/1.6.5-fix_no_dri.patch, +files/10_hw_overlay.diff,
  +files/11_hw_overlay_option.diff, +files/13_dpms_low_power_overlay.patch,
  +files/15_quirk_sony_vaio_vgn-sz4mn.patch,
  +files/16_legacy_backlight_blc_pwn_ctl.patch,
  +files/19_check_exa_pitch_to_fix_rotate_crash.patch,
  +files/xf86-video-i810-2.2.99.902-enable_center_panel_fitting_on_i8xx.patc
  h, +files/0001-fixup-pciaccess-version-detect.patch,
  +files/08_945gm_quirk.diff, +files/12_quirk_sync.patch,
  +files/14_sysfs_fujitsu_backlight.patch,
  +files/17_lockup_virtual_size_2048.patch, +files/18_quirks.patch,
  +files/2.4, +files/2.4/01_fix_compiz_video.diff,
  +files/2.4/01_gen_pci_ids.diff,
  +files/2.4/23_quirks_studiohybrid_eeepc_and_w251u.patch,
  +files/2.4/24_no_render_suspend, +xf86-video-intel-2.2.1-r11.ebuild,
  +files/2.4/05_intel_exa_force_greedy.patch, +files/i810.xinf,
  +files/xf86-video-i810-2.2.99.903-fix-panel-resize-on-i8xx.patch,
  +files/2.4/21_quirk_lenovo.patch,
  +files/xf86-video-i810-2.4.1-0001-Fix-reverted-LVDS-bios-capability-dword-
  definition.patch, +xf86-video-intel-2.4.2-r21.ebuild,
  +files/2.4/xf86-video-i810-2.4.2-0001-Don-t-allocate-a-pipe-for-hotplug-de
  tection.patch, +files/2.4/11_textured_video_option.patch,
  +files/2.4/20_thinkpad_g40_quirk.patch, +files/2.4/25_quirk_nc6110.patch,
  +files/2.4/series, +files/2.4/xf86-video-i810-2.4.2-fix-flicker.patch:
  Initial Import, pkgmove i810 to intel
