@@ -2,18 +2,9 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-# Must be before x-modular eclass is inherited
-# Enable snapshot to get the man page in the right place
-# This should be fixed with a XDP patch later
 SNAPSHOT="yes"
-XDPVER=-1
 
 inherit x-modular
-
-# This really needs a pkgmove...
-SRC_URI="http://xorg.freedesktop.org/archive/individual/driver/xf86-video-intel-${PV}.tar.bz2"
-
-S="${WORKDIR}/xf86-video-intel-${PV}"
 
 DESCRIPTION="X.Org driver for Intel cards"
 
@@ -31,8 +22,10 @@ DEPEND="${RDEPEND}
 	x11-proto/xproto
 	dri? ( x11-proto/xf86driproto
 			x11-proto/glproto
-			>=x11-libs/libdrm-2.2
+			=x11-libs/libdrm-2.3.0
 			x11-libs/libX11 )"
+
+CONFIGURE_OPTIONS="$(use_enable dri)"
 
 PATCHES=(
 "${FILESDIR}/2.4/xf86-video-i810-2.4.2-fix-flicker.patch"
@@ -44,7 +37,7 @@ PATCHES=(
 
 )
 
-CONFIGURE_OPTIONS="$(use_enable dri)"
+
 
 pkg_setup() {
 	if use dri && ! built_with_use x11-base/xorg-server dri; then
