@@ -3,6 +3,10 @@
 # $Header: $
 
   24 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr>
+  xf86-video-intel-2.2.1-r11.ebuild, xf86-video-intel-2.4.2-r21.ebuild:
+  fix compil =libdrm-2.3.0
+
+  24 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr>
   +files/01_fix_compiz_video.diff, +files/01_gen_pci_ids.diff,
   +files/03_dell_1535_quirk.diff,
   +files/xf86-video-i810-2.1.1-fix_build_without_dri.patch,
